--- a/index.html
+++ b/index.html
@@ -657,9 +657,9 @@ https://templatemo.com/tm-518-sentra
                 </div>
             </section>
             <section class="footer">
-                <p>Copyright &copy; 2019 Company Name 
+                <p> &copy; 2019 Aldi Nuryamin 
                 
-                . Design: TemplateMo</p>
+            </p>
             </section>
         </div>
 
