--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@ https://templatemo.com/tm-518-sentra
                 </div>
             </section>
             <section class="footer">
-                <p> &copy; 2019 Aldi Nuryamin 
+                <p> &copy; Aldi Nuryamin 2024 
                 
             </p>
             </section>
