--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ https://templatemo.com/tm-518-sentra
                         <li><a href="#featured">About Me</a></li>
                         <li><a href="#projects">My Photography</a></li>
                         <li><a href="#video">Video</a></li>
-                        <li><a href="#blog">Blog Entries</a></li>
+                        <li><a href="#blog">My Activity</a></li>
                         <li><a href="#contact">Contact Me</a></li>
                     </ul>
                 </nav>
